# kluster-fleet-manager

./: .dockerignore  .gitignore  .gitlab-ci.yml  .mypy.ini  Dockerfile  README.md  install.yaml  pyproject.toml
manager/: __init__.py  _allocator.py  _configs.py  _contractor.py  _conversions.py  _expander.py  _runner.py
manager/_controller/: __init__.py  _fleets.py  _nodes.py  _pods.py
manager/_types/: __init__.py  _fleets.py  _manager.py  _periods.py  _specifications.py
manager/tests/: __init__.py  _utils.py  test_conversions.py
manager/tests/_allocator/: test_compute_fleet_capacity.py
manager/tests/_contractor/: test_get_nodes_to_terminate.py  test_terminate_nodes.py
manager/tests/_controller/: test_get_fleet.py  test_get_nodes.py  test_get_pods.py  test_is_bouncable_pod.py
manager/tests/_expander/: test_grow_fleet.py
manager/tests/_manager/: test_main.py  test_update_fleet.py
manager/tests/_types/: test_types.py
terraform/eks_fleet/: bootstrap.sh  data.tf  locals.tf  main.tf  output.tf  variables.tf
